suffering and pain
Signed-off-by: Stefano Haagmans <stefan0-@hotmail.com>